# substrate

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md  go.mod  go.sum
.githooks/: pre-push
.github/workflows/: ci.yml
cmd/substrate/: main.go
cmd/substrate-mcp/: integration_test.go  main.go
crates/substrate-core/: Cargo.toml
crates/substrate-core/src/: entry.rs  error.rs  home.rs  lib.rs  name.rs  space.rs  thread.rs  transcript.rs  turn.rs
crates/substrate-core/tests/: engine.rs
crates/substrate-mcp/: Cargo.toml
crates/substrate-mcp/src/: main.rs  server.rs  spaces.rs
crates/substrate-mcp/tests/: integration.rs
crates/substrate-tui/: Cargo.toml
crates/substrate-tui/src/: app.rs  cli.rs  commands.rs  main.rs  run.rs  serve.rs  watch.rs
crates/substrate-tui/src/ui/: chat.rs  form.rs  input.rs  list.rs  mod.rs  status.rs  wizard.rs
crates/substrate-tui/tests/: cli.rs  serve.rs
docs/: architecture.md  context-offers.md
docs/notes/: 2026-06-10-comms-feedback.md  2026-07-01-improvements-backlog.md  2026-07-06-go-charm-rebuild.md  2026-07-15-long-thread-context-memory.md  2026-07-16-locally-hosted-rooms.md  QUOTES.md  README.md
docs/threads/: kagi-research.md  substrate.md
internal/cli/: root.go  root_test.go
internal/lifecycle/: context.go  signals_unix.go  signals_windows.go
internal/mcpserver/: service.go  service_test.go  spaces.go
internal/proxy/: proxy.go  proxy_test.go
internal/substrate/: compatibility_test.go  engine_test.go  entry.go  entry_test.go  errors.go  home.go  locks.go  name.go  name_test.go  space.go  storage.go  thread.go  transaction.go  transcript.go  turn.go
internal/ui/: model.go  model_test.go  render.go  styles.go
internal/version/: version.go  version_test.go
internal/watcher/: watcher.go  watcher_test.go
