[workspace]
resolver = "2"
members = [
    "crates/substrate-core",
    "crates/substrate-mcp",
    "crates/substrate-tui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
substrate-core = { path = "crates/substrate-core" }

anyhow = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
form_urlencoded = "1"
clap = { version = "4", features = ["derive", "env"] }
crossterm = "0.28"
notify = "8"
ratatui = "0.29"
rmcp = { version = "1.7", features = ["transport-io"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_norway = "0.9"
thiserror = "2"
tiny_http = "0.12"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tui-textarea = "0.7"

assert_cmd = "2"
predicates = "3"
tempfile = "3"
