[package]
name = "substrate-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
substrate-core.workspace = true

anyhow.workspace = true
clap.workspace = true
notify.workspace = true
rmcp.workspace = true
schemars.workspace = true
serde.workspace = true
serde_norway.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
rmcp = { workspace = true, features = ["client", "transport-child-process"] }
serde_json = "1"
tempfile.workspace = true
